# decisio

./: Dockerfile  LICENSE  Makefile  pyproject.toml
.github/workflows/: ci.yml
tests/: test_decisio.py
