[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "decisio"  # The name of your package
version = "0.1.0"
description = "A sample Python package"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Bassel J. Hamadeh", email = "hamadeh.basel@gmail.com" }]
requires-python = ">=3.8"

[tool.uv]
dev-dependencies = ["pytest>=7.4.0", "ruff>=0.0.10"]

[project.urls]
Homepage = "https://github.com/mrb101/decisio"
